fix: tweaked advancement titles fix: added advancement for upgrading shields

--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -1949,7 +1949,7 @@
   "tetra.advancements.spelunking.containers.description": "Hit the highlighted areas on crates and containers with the correct tools to break them open",
   "tetra.advancements.spelunking.earthpiercer.title": "Planetary Piercing",
   "tetra.advancements.spelunking.earthpiercer.description": "Find an earthpiercer and attach it to a handle",
-  "tetra.advancements.spelunking.find_bolt.title": "Thunderbolt 4",
+  "tetra.advancements.spelunking.find_bolt.title": "Universal Fastener",
   "tetra.advancements.spelunking.find_bolt.description": "Salvage some bolts from the ancient ruins",
   "tetra.advancements.spelunking.find_cell.title": "Thermal Theft",
   "tetra.advancements.spelunking.find_cell.description": "Find a thermal cell in the ancient ruins",
@@ -1959,7 +1959,7 @@
   "tetra.advancements.spelunking.geode.description": "Find a geode in the depths",
   "tetra.advancements.spelunking.geode_open.title": "Mineral Crackers",
   "tetra.advancements.spelunking.geode_open.description": "Upgrade a mallet and use it to break open a geode at a workbench",
-  "tetra.advancements.spelunking.hammer_fix.title": "Dust Off",
+  "tetra.advancements.spelunking.hammer_fix.title": "Restored Machinery",
   "tetra.advancements.spelunking.hammer_fix.description": "Fix up a forge hammer by attaching two charged thermal cells and two upgrades",
   "tetra.advancements.spelunking.hammer_jam.title": "Required Maintenance",
   "tetra.advancements.spelunking.hammer_jam.description": "Experience a forge hammer head jam, the hammer will not be usable until the head is un-jammed",
@@ -1971,8 +1971,8 @@
   "tetra.advancements.spelunking.hammer_craft.description": "Use a forge hammer to craft a module requiring tier 5+ hammering",
   "tetra.advancements.spelunking.hammer_remove.title": "Clawfinger",
   "tetra.advancements.spelunking.hammer_remove.description": "Use a claw to remove an upgrade from a forge hammer",
-  "tetra.advancements.spelunking.loot_ruins.title": "Silky Hex",
-  "tetra.advancements.spelunking.loot_ruins.description": "Successfully harvest flooring from the ancient ruins",
+  "tetra.advancements.spelunking.loot_ruins.title": "Reclamation Protocol",
+  "tetra.advancements.spelunking.loot_ruins.description": "Use a tier 6 hammer with silk touch to harvest blocks from the ruins",
   "tetra.advancements.spelunking.pristine_socket.title": "Expensive Maintenance",
   "tetra.advancements.spelunking.pristine_socket.description": "Find a pristine gem in a geode and use it to socket a sword or a tool",
   "tetra.advancements.spelunking.refill_cell.title": "Excitement",
@@ -1984,8 +1984,10 @@
 
   "tetra.advancements.upgrades.root.title": "Basic Tinkering",
   "tetra.advancements.upgrades.root.description": "Craft a mallet from two sticks and two planks\n \nItem Reward: Holosphere",
-  "tetra.advancements.upgrades.bow_upgrade.title": "Bowow",
+  "tetra.advancements.upgrades.bow_upgrade.title": "Archer's Adjustments",
   "tetra.advancements.upgrades.bow_upgrade.description": "Upgrade a bow in a workbench",
+  "tetra.advancements.upgrades.shield_upgrade.title": "Adaptive Protection",
+  "tetra.advancements.upgrades.shield_upgrade.description": "Upgrade a shield in a workbench",
   "tetra.advancements.upgrades.double_headed.title": "[?] Double headed tools",
   "tetra.advancements.upgrades.double_headed.description": "When using double headed tools (e.g. pickaxes, axes, hammers) it's only the head with the highest value that will be considered when determining damage or harvest tier/efficiency.",
   "tetra.advancements.upgrades.hammer_2.title": "Hammer II",
