additional advancement tweaks

--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -1065,11 +1065,11 @@
   "tetra.variant.double_socket/lapis": "Socket [§9Lapis§r]",
   "tetra.variant.double_socket/amber": "Socket [§6Amber§r]",
   "tetra.variant.double_socket/pristine_diamond": "Socket [§bDiamond+§r]",
-  "tetra.variant.double_socket/pristine_diamond.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and provides magical boons to the tools wielder.\n \nThe gem is of pristine quality and provides increased effects.",
+  "tetra.variant.double_socket/pristine_diamond.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and provides magical boons to the tool's wielder.\n \nThe gem is of pristine quality and provides increased effects.",
   "tetra.variant.double_socket/pristine_emerald": "Socket [§aEmerald+§r]",
-  "tetra.variant.double_socket/pristine_emerald.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and provides magical boons to the tools wielder.\n \nThe gem is of pristine quality and provides increased effects.",
+  "tetra.variant.double_socket/pristine_emerald.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and provides magical boons to the tool's wielder.\n \nThe gem is of pristine quality and provides increased effects.",
   "tetra.variant.double_socket/pristine_lapis": "Socket [§9Lapis+§r]",
-  "tetra.variant.double_socket/pristine_lapis.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and provides magical boons to the tools wielder.\n \nThe gem is of pristine quality and provides increased effects.",
+  "tetra.variant.double_socket/pristine_lapis.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and provides magical boons to the tool's wielder.\n \nThe gem is of pristine quality and provides increased effects.",
 
   "tetra/schematic/double/binding.name": "Binding",
   "tetra/schematic/double/binding.description": "Bind the tool head to the handle by binding it with rope or straps, or by using completely different materials and methods.",
@@ -1944,7 +1944,7 @@
   "tetra.advancements.spelunking.ancient_ruins.title" : "Long Gone",
   "tetra.advancements.spelunking.ancient_ruins.description": "Find ancient ruins deep down in cold or mountainous biomes",
   "tetra.advancements.spelunking.scanner.title" : "Sweepstakes",
-  "tetra.advancements.spelunking.scanner.description": "Install a holosphere scanner to make it easier to find ancient ruins",
+  "tetra.advancements.spelunking.scanner.description": "Use a workbench to upgrade the holosphere with a scanner, the scanner makes it easier to find ancient ruins",
   "tetra.advancements.spelunking.containers.title": "\"Salvage\"",
   "tetra.advancements.spelunking.containers.description": "Hit the highlighted areas on crates and containers with the correct tools to break them open",
   "tetra.advancements.spelunking.earthpiercer.title": "Planetary Piercing",
@@ -1965,8 +1965,8 @@
   "tetra.advancements.spelunking.hammer_jam.description": "Experience a forge hammer head jam, the hammer will not be usable until the head is un-jammed",
   "tetra.advancements.spelunking.hammer_unjam.title": "Maintenance Acquired",
   "tetra.advancements.spelunking.hammer_unjam.description": "Smack a jammed hammer head with a handheld hammer of at least tier 4 to get the forge hammer back into a working state",
-  "tetra.advancements.spelunking.hammer_power.title": "Overdrive",
-  "tetra.advancements.spelunking.hammer_power.description": "Attach a combustion chamber to a forge hammer to increase it's hammer tier by 1",
+  "tetra.advancements.spelunking.hammer_power.title": "Combustion Power-up",
+  "tetra.advancements.spelunking.hammer_power.description": "Attach a combustion chamber to a forge hammer to increase its hammer tier by 1, hammer upgrades like the combustion chambers can be found in containers",
   "tetra.advancements.spelunking.hammer_craft.title": "Magmatic Press Channel",
   "tetra.advancements.spelunking.hammer_craft.description": "Use a forge hammer to craft a module requiring tier 5+ hammering",
   "tetra.advancements.spelunking.hammer_remove.title": "Clawfinger",
