--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -539,7 +539,7 @@
   "tetra.salvage_vent_plate_action.label": "Salvage",
 
   "item.tetra.combustion_chamber": "Combustion Chamber",
-  "item.tetra.combustion_chamber.description": "Can be attached to a forge hammer to increase it's hammer tier by 1",
+  "item.tetra.combustion_chamber.description": "Can be attached to a forge hammer to increase its hammer tier by 1",
   "tetra.salvage_combustion_chamber_action.label": "Salvage",
 
   "item.tetra.planar_stabilizer": "Planar Stabilizer",
@@ -1968,7 +1968,7 @@
   "tetra.advancements.spelunking.earthpiercer.description": "Find an earthpiercer and attach it to a handle",
   "tetra.advancements.spelunking.find_bolt.title": "Universal Fastener",
   "tetra.advancements.spelunking.find_bolt.description": "Salvage some bolts from the ancient ruins",
-  "tetra.advancements.spelunking.find_cell.title": "Thermal Theft",
+  "tetra.advancements.spelunking.find_cell.title": "Thermal Container",
   "tetra.advancements.spelunking.find_cell.description": "Find a thermal cell in the ancient ruins",
   "tetra.advancements.spelunking.find_latch.title": "§oClick Click Click Click",
   "tetra.advancements.spelunking.find_latch.description": "Salvage a quick latch from the ancient ruins and use it to improve a toolbelt attachment",
@@ -1992,7 +1992,7 @@
   "tetra.advancements.spelunking.loot_ruins.description": "Use a tier 6 hammer with silk touch to harvest blocks from the ruins",
   "tetra.advancements.spelunking.pristine_socket.title": "Expensive Maintenance",
   "tetra.advancements.spelunking.pristine_socket.description": "Find a pristine gem in a geode and use it to socket a sword or a tool",
-  "tetra.advancements.spelunking.refill_cell.title": "Excitement",
+  "tetra.advancements.spelunking.refill_cell.title": "Thermal Transfer",
   "tetra.advancements.spelunking.refill_cell.description": "Use a transfer unit or a core extractor to fully charge a thermal cell",
   "tetra.advancements.spelunking.stonecutter.title": "Like Butter",
   "tetra.advancements.spelunking.stonecutter.description": "Find a stonecutter and attach it to a hilt",
