fix: added hammer upgrade drops to crates

--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -1965,7 +1965,9 @@
   "tetra.advancements.spelunking.containers.title": "\"Salvage\"",
   "tetra.advancements.spelunking.containers.description": "Hit the highlighted areas on crates and containers with the correct tools to break them open",
   "tetra.advancements.spelunking.earthpiercer.title": "Planetary Piercing",
-  "tetra.advancements.spelunking.earthpiercer.description": "Find an earthpiercer and attach it to a handle",
+  "tetra.advancements.spelunking.earthpiercer.description": "Find an earthpiercer in a container and attach it to a handle, the earthpiercer can break several blocks in a line",
+  "tetra.advancements.spelunking.stonecutter.title": "Like Butter",
+  "tetra.advancements.spelunking.stonecutter.description": "Find a stonecutter in a container and attach it to a hilt, the stonecutter can cut through stone in wide swathes",
   "tetra.advancements.spelunking.find_bolt.title": "Universal Fastener",
   "tetra.advancements.spelunking.find_bolt.description": "Salvage some bolts from the ancient ruins",
   "tetra.advancements.spelunking.find_cell.title": "Thermal Container",
@@ -1983,7 +1985,7 @@
   "tetra.advancements.spelunking.hammer_unjam.title": "Maintenance Acquired",
   "tetra.advancements.spelunking.hammer_unjam.description": "Smack a jammed hammer head with a handheld hammer of at least tier 4 to get the forge hammer back into a working state",
   "tetra.advancements.spelunking.hammer_power.title": "Combustion Power-up",
-  "tetra.advancements.spelunking.hammer_power.description": "Attach a combustion chamber to a forge hammer to increase its hammer tier by 1, hammer upgrades like the combustion chambers can be found in containers",
+  "tetra.advancements.spelunking.hammer_power.description": "Attach a combustion chamber to a forge hammer to increase its hammer tier by 1, hammer upgrades like the combustion chamber can be found in crates and containers",
   "tetra.advancements.spelunking.hammer_craft.title": "Magmatic Press Channel",
   "tetra.advancements.spelunking.hammer_craft.description": "Use a forge hammer to craft a module requiring tier 5+ hammering",
   "tetra.advancements.spelunking.hammer_remove.title": "Clawfinger",
@@ -1994,8 +1996,6 @@
   "tetra.advancements.spelunking.pristine_socket.description": "Find a pristine gem in a geode and use it to socket a sword or a tool",
   "tetra.advancements.spelunking.refill_cell.title": "Thermal Transfer",
   "tetra.advancements.spelunking.refill_cell.description": "Use a transfer unit or a core extractor to fully charge a thermal cell",
-  "tetra.advancements.spelunking.stonecutter.title": "Like Butter",
-  "tetra.advancements.spelunking.stonecutter.description": "Find a stonecutter and attach it to a hilt",
   "tetra.advancements.spelunking.use_bolt.title": "Tweaked to Perfection",
   "tetra.advancements.spelunking.use_bolt.description": "Use a bolt to bind a tool or a sword, then use the tweak tab in a workbench to change the stats of the item",
 
