change: all stone types can now be used to create a tier 2 hammer

--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -2010,9 +2010,9 @@
   "tetra.advancements.upgrades.double_headed.title": "[?] Double headed tools",
   "tetra.advancements.upgrades.double_headed.description": "When using double headed tools (e.g. pickaxes, axes, hammers) it's only the head with the highest value that will be considered when determining damage or harvest tier/efficiency.",
   "tetra.advancements.upgrades.hammer_2.title": "Hammer II",
-  "tetra.advancements.upgrades.hammer_2.description": "Craft a double-sided diorite hammer, the diorite hammer provides tier two hammering capabilities",
+  "tetra.advancements.upgrades.hammer_2.description": "Craft a double-sided hammer from any type of stone, the stone hammer provides tier two hammering capabilities\n\n§7A secondary hammer will be required to craft this",
   "tetra.advancements.upgrades.hammer_3.title": "Hammer III",
-  "tetra.advancements.upgrades.hammer_3.description": "Craft a double-sided iron hammer, the iron hammer provides tier three hammering capabilities",
+  "tetra.advancements.upgrades.hammer_3.description": "Craft a double-sided iron hammer, the iron hammer provides tier three hammering capabilities\n\n§7An upgraded handle or a binding will provide enough integrity to support an iron hammer",
   "tetra.advancements.upgrades.hammer_4.title": "Hammer IV",
   "tetra.advancements.upgrades.hammer_4.description": "Craft a double-sided blackstone hammer, the blackstone hammer provides tier four hammering capabilities",
   "tetra.advancements.upgrades.hammer_5.title": "Hammer V",
