--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -294,16 +294,18 @@
   "tetra.stats.workable": "Workable",
   "tetra.stats.workable.tooltip": "Honing this item takes §e%s§r less time",
 
-  "tetra.stats.hammer.tooltip": "This item can be used for hammering, it's useful for crafting and salvaging\n %s\n§7Hammer tier: §e%s\n§7Hammer efficiency: §e%s",
-  "tetra.stats.axe.tooltip": "This item can be used for chopping wood\n %s\n§7Axe tier: §e%s\n§7Axe efficiency: §e%s",
-  "tetra.stats.pickaxe.tooltip": "This item can be used for mining\n %s\n§7Pickaxe tier: §e%s\n§7Pickaxe efficiency: §e%s",
-  "tetra.stats.shovel.tooltip": "This item can be used for digging\n %s\n§7Shovel tier: §e%s\n§7Shovel efficiency: §e%s",
-  "tetra.stats.hoe.tooltip": "This item can be used for harvesting plants\n %s\n§7Hoe tier: §e%s\n§7Hoe efficiency: §e%s",
-  "tetra.stats.cut.tooltip": "This item can be used for cutting, usable for crafting and for breaking webs and plants\n %s\n§7Cut tier: §e%s\n§7Cut efficiency: §e%s",
-  "tetra.stats.pry.tooltip": "This item can be used for prying things open, usable for salvaging\n %s\n§7Pry tier: §e%s\n§7Pry efficiency: §e%s",
+  "tetra.stats.hammer.tooltip": "This item can be used for hammering, it's useful for crafting and salvaging\n \n§7Hammer tier: §e%s\n§7Hammer efficiency: §e%s",
+  "tetra.stats.axe.tooltip": "This item can be used for chopping wood\n \n§7Axe tier: §e%s\n§7Axe efficiency: §e%s",
+  "tetra.stats.pickaxe.tooltip": "This item can be used for mining\n \n§7Pickaxe tier: §e%s\n§7Pickaxe efficiency: §e%s",
+  "tetra.stats.shovel.tooltip": "This item can be used for digging\n \n§7Shovel tier: §e%s\n§7Shovel efficiency: §e%s",
+  "tetra.stats.hoe.tooltip": "This item can be used for harvesting plants\n \n§7Hoe tier: §e%s\n§7Hoe efficiency: §e%s",
+  "tetra.stats.cut.tooltip": "This item can be used for cutting, usable for crafting and for breaking webs and plants\n \n§7Cut tier: §e%s\n§7Cut efficiency: §e%s",
+  "tetra.stats.pry.tooltip": "This item can be used for prying things open, usable for salvaging\n \n§7Pry tier: §e%s\n§7Pry efficiency: §e%s",
 
-  "tetra.stats.tool.striking": "§eStriking\n§7Instantly harvests hit blocks, limited by swing speed",
-  "tetra.stats.tool.sweeping": "§eSweeping\n§7Instantly harvests several blocks on hit, limited by swing speed",
+  "tetra.stats.tool.striking": "Striking",
+  "tetra.stats.tool.striking.tooltip": "Instantly harvests hit blocks, limited by swing speed",
+  "tetra.stats.tool.sweeping": "Sweeping",
+  "tetra.stats.tool.sweeping.tooltip": "Instantly harvests several blocks on hit, limited by swing speed",
 
   "tetra.stats.integrity": "Integrity",
   "tetra.stats.integrity.tooltip_positive": "This module provides §e%s§r integrity",
